# SimpleParser

./: CMakeLists.txt  README.md  basic_classes.cpp  basic_classes.hpp  parser.cpp  runBuild.sh
